# offline-transcriber

./: .gitignore  README.md  SRS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: parakeet-encoder-mask-fix.mdc
backend/: README.md  asr.py  audio_io.py  chunker.py  constraints.txt  diarize.py  events.py  export.py  fusion.py  main.py  pipeline.py  profiling.py  requirements-bench.txt  requirements.txt  vad.py
backend/asr_backends/: __init__.py
benchmarks/: baseline.json
docs/: relevant-repos.md
models/: README.md
models/pyannote-3.1/: config.yaml
scripts/: __init__.py  debug_empty_chunks.py  download_models.py
scripts/bench/: __init__.py  compare.py  datasets.py  run.py  wer.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
